--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container py-3">
+            <div class="container py-2">
                 <a class="navbar-brand fw-bold" href="#">S.N Badsha Convention Hall</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,7 +41,96 @@
             </div>
         </nav>
     </header>
+    <main>
+        <!-- smart slideshow -->
+        <section>
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                        aria-label="Slide 4"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./images/slideshow/caro-1.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption mb-2">
+                            <h1>
+                                Welcome to
+                                <br>
+                                S.N Badsha Convention Hall
+                            </h1>
+                            <p>Sn.BCH is one of the best convention facility in Chittagong with a very big outdoor
+                                space.
+                            </p>
+                            <a href="https://www.facebook.com/SnBadsha-Convention-HALL-228293617609101" target="_blocks"
+                                class="btn btn-light px-4 py-2 fw-bold text-info">Book Now</a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./images/slideshow/caro-2.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block mb-2">
+                            <h1>
+                                Perfect
+                                <br>
+                                For your upcoming event.
+                            </h1>
+                            <p>
+                                For pandemic situation Sn badsha has taken all the precautions.
+                            </p>
+                            <a href="https://www.facebook.com/SnBadsha-Convention-HALL-228293617609101" target="_blocks"
+                                class="btn btn-light px-4 py-2 fw-bold text-info">Book Now</a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./images/slideshow/caro-3.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block mb-2">
+                            <h1>
+                                Special
+                                <br>
+                                Fully air conditioned hall
+                            </h1>
+                            <p>
+                                Our hall is fully air conditioned and have two separate floor for ladies and gents .
+                            </p>
+                            <a href="https://www.facebook.com/SnBadsha-Convention-HALL-228293617609101" target="_blocks"
+                                class="btn btn-light px-4 py-2 fw-bold text-info">Book Now</a>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./images/slideshow/caro-4.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block mb-2">
+                            <h1>
+                                Mega Event Solution
+                            </h1>
+                            <p>
+                                We are renting out-door space also for your mega event. Book your your slot today.
+                            </p>
+                            <a href="https://www.facebook.com/SnBadsha-Convention-HALL-228293617609101" target="_blocks"
+                                class="btn btn-light px-4 py-2 fw-bold text-info">Book Now</a>
+                        </div>
+                    </div>
+                </div>
 
+            </div>
+            <div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+    </main>
 
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
