--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Convention-Center</title>
+
     <!-- bootstrap link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <!-- custom css -->
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- fontawesome kit -->
+    <script src="https://kit.fontawesome.com/c472e688d6.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -130,6 +136,125 @@
                 </button>
             </div>
         </section>
+        <!-- end of slideshow -->
+        <!-- package section -->
+        <section class="container">
+            <h1>Our Packages</h1>
+            <div class="row mb-5">
+                <div class="col-3 p-3">
+                    <div class="extra-margin-package">
+                        <h2 class="fw-bolder mb-3">$300</h2>
+                        <h3 class="fw-bolder mb-2">Business fair</h3>
+                        <p class="text-muted">
+                            For most businesses event like book fair, craft fair.
+                        </p>
+                        <p class="text-muted">
+                            <i class="far fa-check-circle me-2"></i>limited space access
+                        </p>
+                        <p class="text-muted">
+                            <i class="far fa-check-circle me-2"></i>Secuirty facility
+                        </p>
+                        <p class="text-muted">
+                            <i class="far fa-check-circle me-2"></i>event support
+                        </p>
+                        <p class="text-muted">
+                            <i class="far fa-check-circle me-2"></i>Decoration design
+                        </p>
+                        <p class="text-muted">
+                            <i class="far fa-check-circle me-2"></i>Per day bill
+                        </p>
+                        <a href="" class="btn btn-light text-primary fw-bold rounded-pill w-75 px-auto mt-2">Choose
+                            Plan</a>
+                    </div>
+
+                </div>
+                <div class="col-3 p-3">
+                    <div class="extra-margin-package">
+                        <h2 class="fw-bolder mb-3">$500</h2>
+                        <h3 class="fw-bolder mb-2">Wedding basic</h3>
+                        <p class="text-muted">
+                            For weddings with basic plan and limited item
+                        </p>
+                        <p class="text-muted">
+                            <i class="far fa-check-circle me-2"></i>Full space access
+                        </p>
+                        <p class="text-muted">
+                            <i class="far fa-check-circle me-2"></i>Food arrangement
+                        </p>
+                        <p class="text-muted">
+                            <i class="far fa-check-circle me-2"></i>Mangement support
+                        </p>
+                        <p class="text-muted">
+                            <i class="far fa-check-circle me-2"></i>Decoration design
+                        </p>
+                        <p class="text-muted">
+                            <i class="far fa-check-circle me-2"></i>Billed as shift
+                        </p>
+                        <a href="" class="btn btn-light text-primary fw-bold rounded-pill w-75 px-auto mt-2">Choose
+                            Plan</a>
+                    </div>
+
+                </div>
+                <div class="col-3 p-3 ">
+                    <div class="p-3 mb-3 best-price-background">
+                        <h6 class="hot-price-legend">Hot Price</h6>
+                        <h2 class="fw-bolder text-light mb-3">$800</h2>
+                        <h3 class="fw-bolder text-light mb-2">Wedding plus</h3>
+                        <p class="text-white">
+                            For most weddings with premium plans
+                        </p>
+                        <p class="text-white">
+                            <i class="far fa-check-circle me-2"></i>Full space access
+                        </p>
+                        <p class="text-white">
+                            <i class="far fa-check-circle me-2"></i>Dedicated team
+                        </p>
+                        <p class="text-white">
+                            <i class="far fa-check-circle me-2"></i>Buffet food
+                        </p>
+                        <p class="text-white">
+                            <i class="far fa-check-circle me-2"></i>Premium Decoration
+                        </p>
+                        <p class="text-white">
+                            <i class="far fa-check-circle me-2"></i>Pay as plan
+                        </p>
+                        <a href=""
+                            class="btn btn-light text-primary fw-bold rounded-pill w-100 px-auto mt-2 mb-3">Choose
+                            Plan</a>
+                    </div>
+
+                </div>
+                <div class="col-3 p-3">
+                    <div class="extra-margin-package">
+                        <h2 class="fw-bolder mb-3">$1200</h2>
+                        <h3 class="fw-bolder mb-2">Corporate event</h3>
+                        <p class="text-muted">
+                            For most corporate business events
+                        </p>
+                        <p class="text-muted">
+                            <i class="far fa-check-circle me-2"></i>Full space access
+                        </p>
+                        <p class="text-muted">
+                            <i class="far fa-check-circle me-2"></i>Dedicated team
+                        </p>
+                        <p class="text-muted">
+                            <i class="far fa-check-circle me-2"></i>Buffet food
+                        </p>
+                        <p class="text-muted">
+                            <i class="far fa-check-circle me-2"></i>Premium Decoration
+                        </p>
+                        <p class="text-muted">
+                            <i class="far fa-check-circle me-2"></i>Pay as plan
+                        </p>
+                        <a href="" class="btn btn-light text-primary fw-bold rounded-pill w-75 px-auto mt-2">Choose
+                            Plan</a>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+
     </main>
 
     <!-- bootstrap js -->
