--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     </div>
                     <div class="carousel-item">
                         <img src="./images/slideshow/caro-2.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block mb-2">
+                        <div class="carousel-caption mb-2">
                             <h1>
                                 Perfect
                                 <br>
@@ -94,7 +94,7 @@
                     </div>
                     <div class="carousel-item">
                         <img src="./images/slideshow/caro-3.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block mb-2">
+                        <div class="carousel-caption mb-2">
                             <h1>
                                 Special
                                 <br>
@@ -109,7 +109,7 @@
                     </div>
                     <div class="carousel-item">
                         <img src="./images/slideshow/caro-4.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption d-none d-md-block mb-2">
+                        <div class="carousel-caption mb-2">
                             <h1>
                                 Mega Event Solution
                             </h1>
@@ -138,10 +138,10 @@
         </section>
         <!-- end of slideshow -->
         <!-- package section -->
-        <section class="container">
-            <h1>Our Packages</h1>
+        <section class="container my-5">
+            <h1 class="text-center pt-5 pb-4 my-5">Our Packages</h1>
             <div class="row mb-5">
-                <div class="col-3 p-3">
+                <div class="col-12 col-sm-6 col-lg-3 p-3">
                     <div class="extra-margin-package">
                         <h2 class="fw-bolder mb-3">$300</h2>
                         <h3 class="fw-bolder mb-2">Business fair</h3>
@@ -168,7 +168,7 @@
                     </div>
 
                 </div>
-                <div class="col-3 p-3">
+                <div class="col-12 col-sm-6 col-lg-3 p-3">
                     <div class="extra-margin-package">
                         <h2 class="fw-bolder mb-3">$500</h2>
                         <h3 class="fw-bolder mb-2">Wedding basic</h3>
@@ -195,7 +195,7 @@
                     </div>
 
                 </div>
-                <div class="col-3 p-3 ">
+                <div class="col-12 col-sm-6 col-lg-3 p-3 ">
                     <div class="p-3 mb-3 best-price-background">
                         <h6 class="hot-price-legend">Hot Price</h6>
                         <h2 class="fw-bolder text-light mb-3">$800</h2>
@@ -224,7 +224,7 @@
                     </div>
 
                 </div>
-                <div class="col-3 p-3">
+                <div class="col-12 col-sm-6 col-lg-3 p-3">
                     <div class="extra-margin-package">
                         <h2 class="fw-bolder mb-3">$1200</h2>
                         <h3 class="fw-bolder mb-2">Corporate event</h3>
@@ -253,6 +253,7 @@
                 </div>
             </div>
         </section>
+        <!-- package ended -->
 
 
     </main>
