--- a/index.html
+++ b/index.html
@@ -61,16 +61,17 @@
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
                         aria-label="Slide 4"></button>
                 </div>
-                <div class="carousel-inner">
+                <div class="carousel-inner ">
                     <div class="carousel-item active">
                         <img src="./images/slideshow/caro-1.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption mb-2">
-                            <h1>
+                        <div class="carousel-caption">
+                            <h2 class="fw-bold p-0 m-0">
                                 Welcome to
                                 <br>
                                 S.N Badsha Convention Hall
-                            </h1>
-                            <p>Sn.BCH is one of the best convention facility in Chittagong with a very big outdoor
+                            </h2>
+                            <p class="fw-light">
+                                Sn.BCH is one of the best convention facility in Chittagong with a very big outdoor
                                 space.
                             </p>
                             <a href="https://www.facebook.com/SnBadsha-Convention-HALL-228293617609101" target="_blocks"
@@ -79,13 +80,13 @@
                     </div>
                     <div class="carousel-item">
                         <img src="./images/slideshow/caro-2.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption mb-2">
-                            <h1>
+                        <div class="carousel-caption">
+                            <h2 class="fw-bold p-0 m-0">
                                 Perfect
                                 <br>
                                 For your upcoming event.
-                            </h1>
-                            <p>
+                            </h2>
+                            <p class="fw-light">
                                 For pandemic situation Sn badsha has taken all the precautions.
                             </p>
                             <a href="https://www.facebook.com/SnBadsha-Convention-HALL-228293617609101" target="_blocks"
@@ -94,13 +95,13 @@
                     </div>
                     <div class="carousel-item">
                         <img src="./images/slideshow/caro-3.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption mb-2">
-                            <h1>
+                        <div class="carousel-caption">
+                            <h2 class="fw-bold p-0 m-0">
                                 Special
                                 <br>
                                 Fully air conditioned hall
-                            </h1>
-                            <p>
+                            </h2>
+                            <p class="fw-light">
                                 Our hall is fully air conditioned and have two separate floor for ladies and gents .
                             </p>
                             <a href="https://www.facebook.com/SnBadsha-Convention-HALL-228293617609101" target="_blocks"
@@ -109,11 +110,11 @@
                     </div>
                     <div class="carousel-item">
                         <img src="./images/slideshow/caro-4.png" class="d-block w-100" alt="...">
-                        <div class="carousel-caption mb-2">
-                            <h1>
+                        <div class="carousel-caption">
+                            <h2 class="fw-bold p-0 m-0">
                                 Mega Event Solution
-                            </h1>
-                            <p>
+                            </h2>
+                            <p class="fw-light">
                                 We are renting out-door space also for your mega event. Book your your slot today.
                             </p>
                             <a href="https://www.facebook.com/SnBadsha-Convention-HALL-228293617609101" target="_blocks"
@@ -195,7 +196,7 @@
                     </div>
 
                 </div>
-                <div class="col-12 col-sm-6 col-lg-3 p-3 ">
+                <div class="col-12 col-sm-6 col-lg-3 p-2 ">
                     <div class="p-3 mb-3 best-price-background">
                         <h6 class="hot-price-legend">Hot Price</h6>
                         <h2 class="fw-bolder text-light mb-3">$800</h2>
@@ -254,6 +255,85 @@
             </div>
         </section>
         <!-- package ended -->
+        <!-- frequently asked question -->
+        <section class="container my-5">
+            <div class="row">
+                <div class="col-11 col-md-6 d-flex justify-content-center align-items-center pt-3">
+                    <div class="accordion" id="accordionExample">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    What’s the difference between event design and event planning?
+                                </button>
+                            </h2>
+                            <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body text-muted">
+                                    Event design and event planning work hand in hand to deliver a successful
+                                    event.Events by Knight offer tailor made events. This means we incorporate both
+                                    event design and event planning to create that perfect event.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingTwo">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    How early do we need to start planning an event?
+                                </button>
+                            </h2>
+                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    With our experience, planning private and corporate events requires a shorter period
+                                    of time because guests usually have already confirmed their attendance and no
+                                    details are needed to be released to the public. The only things that need planning
+                                    are the event elements such as catering, entertainment, technical and venue.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingThree">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    What is your refund and cancellation policy?
+                                </button>
+                            </h2>
+                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    Cancellations made 7 days or more in advance of the event date, will receive a 100%
+                                    refund. Cancellations made within 3 - 6 days will incur a 20% fee. Cancellations
+                                    made within 48 hours to the event will incur a 30% fee.
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingFour">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                    How do you keep budgets on track?
+                                </button>
+                            </h2>
+                            <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
+                                data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                    First we <strong>Review Your Expenses</strong>. Then we set goal and <strong>Measure
+                                        ROI</strong>(Return on Investment). Finally, we create a plan of action. But,
+                                    sometimes there are unexpected purchases that your event will require.
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-11 col-md-6 pt-3">
+                    <div class="d-flex justify-content-center align-items-center">
+                        <img class="img-fluid rounded-circle" src="./images/faq (2).png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
     </main>
