--- a/index.html
+++ b/index.html
@@ -329,14 +329,33 @@
                 </div>
                 <div class="col-11 col-md-6 pt-3">
                     <div class="d-flex justify-content-center align-items-center">
-                        <img class="img-fluid rounded-circle" src="./images/faq (2).png" alt="">
+                        <img class="img-fluid rounded-circle" src="./images/faq.png" alt="">
                     </div>
                 </div>
             </div>
         </section>
-
-
+        <!-- faq end -->
     </main>
+    <footer>
+        <section class="bg-dark">
+            <div class="container text-white d-block d-md-flex justify-content-between align-items-center pb-5">
+                <div class="text-center pt-5">
+                    <small>
+                        Copyright © 2022 S.N Badsha Convention Hall. All rights reserved
+                    </small>
+                </div>
+                <div class="d-flex flex-column align-items-center pt-5">
+                    <p class="display-6">Get the App</p>
+                    <a href="https://apps.apple.com/us/app/programming-hero-coding-fun/id1478201849" target="_blank">
+                        <img src="./images/app/app-store.png" alt="">
+                    </a>
+                    <a href="https://play.google.com/store/apps/details?id=bd.jetbrain.nazim.al_quran" target="_blank">
+                        <img src="./images/app/google-play.png" alt="">
+                    </a>
+                </div>
+            </div>
+        </section>
+    </footer>
 
     <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
