--- a/index.html
+++ b/index.html
@@ -201,22 +201,22 @@
                         <h6 class="hot-price-legend">Hot Price</h6>
                         <h2 class="fw-bolder text-light mb-3">$800</h2>
                         <h3 class="fw-bolder text-light mb-2">Wedding plus</h3>
-                        <p class="text-white">
+                        <p class="">
                             For most weddings with premium plans
                         </p>
-                        <p class="text-white">
+                        <p class="">
                             <i class="far fa-check-circle me-2"></i>Full space access
                         </p>
-                        <p class="text-white">
+                        <p class="">
                             <i class="far fa-check-circle me-2"></i>Dedicated team
                         </p>
-                        <p class="text-white">
+                        <p class="">
                             <i class="far fa-check-circle me-2"></i>Buffet food
                         </p>
-                        <p class="text-white">
+                        <p class="">
                             <i class="far fa-check-circle me-2"></i>Premium Decoration
                         </p>
-                        <p class="text-white">
+                        <p class="">
                             <i class="far fa-check-circle me-2"></i>Pay as plan
                         </p>
                         <a href=""
@@ -335,6 +335,59 @@
             </div>
         </section>
         <!-- faq end -->
+        <!-- booking and contact -->
+        <section class="container">
+            <div class="row my-5">
+                <div class="col-12 col-sm-5 my-5 d-flex justify-content-center">
+                    <div>
+                        <h2 class="text-center fw-bold">Get Booked Now</h2>
+                        <div class="form-floating mb-3">
+                            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                            <label for="floatingInput">Function Type</label>
+                        </div>
+                        <div class="form-floating">
+                            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                            <label for="floatingPassword">Pick a date</label>
+                        </div>
+                        <a class="btn btn-primary mt-3" href="#" role="button">Check Availability</a>
+                    </div>
+                </div>
+                <div class="col-1 d-none d-sm-block border-end border-3">
+                </div>
+                <div class="col-11 col-sm-6 my-5">
+                    <h2 class="text-center fw-bold">Contact Info</h2>
+                    <div class="row">
+                        <div class="col-3 d-flex justify-content-end align-items-center">
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                                class="w-50 bg-secondary rounded-circle p-2 text-white" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
+                            </svg>
+                        </div>
+                        <div class="col-9 pt-3">
+                            <p>
+                                Wajediao.ononna r/a panchlaish ctg nearby wajedia madrasah (7.37 km) Chittagong,
+                                Chittagong Division, Bangladesh
+                            </p>
+                        </div>
+                        <div class="col-3 d-flex justify-content-end align-items-center">
+                            <svg xmlns="http://www.w3.org/2000/svg"
+                                class="w-50 bg-secondary rounded-circle p-2 text-white" fill="none" viewBox="0 0 24 24"
+                                stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                    d="M12 18h.01M8 21h8a2 2 0 002-2V5a2 2 0 00-2-2H8a2 2 0 00-2 2v14a2 2 0 002 2z" />
+                            </svg>
+                        </div>
+                        <div class="col-9 pt-3">
+                            <p>Phone: 01864-747955</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <section class="bg-dark">
