--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="carousel-inner ">
                     <div class="carousel-item active">
-                        <img src="./images/slideshow/caro-1.png" class="d-block w-100" alt="...">
+                        <img src="./images/slideshow/caro-1.png" class="d-block" alt="...">
                         <div class="carousel-caption">
                             <h2 class="fw-bold p-0 m-0">
                                 Welcome to
@@ -79,7 +79,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="./images/slideshow/caro-2.png" class="d-block w-100" alt="...">
+                        <img src="./images/slideshow/caro-2.png" class="d-block" alt="...">
                         <div class="carousel-caption">
                             <h2 class="fw-bold p-0 m-0">
                                 Perfect
@@ -94,7 +94,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="./images/slideshow/caro-3.png" class="d-block w-100" alt="...">
+                        <img src="./images/slideshow/caro-3.png" class="d-block" alt="...">
                         <div class="carousel-caption">
                             <h2 class="fw-bold p-0 m-0">
                                 Special
@@ -109,7 +109,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="./images/slideshow/caro-4.png" class="d-block w-100" alt="...">
+                        <img src="./images/slideshow/caro-4.png" class="d-block" alt="...">
                         <div class="carousel-caption">
                             <h2 class="fw-bold p-0 m-0">
                                 Mega Event Solution
@@ -138,6 +138,27 @@
             </div>
         </section>
         <!-- end of slideshow -->
+        <section class="container mt-5">
+            <div class="toast show align-items-center" role="alert" aria-live="assertive" aria-atomic="true">
+                <div class="d-flex">
+                    <div class="toast-body">
+                        Hello, world! This is a toast message.
+                    </div>
+                    <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast"
+                        aria-label="Close"></button>
+                </div>
+            </div>
+            <div class="toast show align-items-center text-white bg-primary border-0" role="alert" aria-live="assertive"
+                aria-atomic="true">
+                <div class="d-flex">
+                    <div class="toast-body">
+                        Hello, world! This is a toast message.
+                    </div>
+                    <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"
+                        aria-label="Close"></button>
+                </div>
+            </div>
+        </section>
         <!-- package section -->
         <section class="container my-5">
             <h1 class="text-center pt-5 pb-4 my-5">Our Packages</h1>
